--- a/package.json
+++ b/package.json
@@ -21,17 +21,19 @@
   },
   "homepage": "https://github.com/showpad/angularin-viewport",
   "devDependencies": {
-    "bower": "1.3.x",
-    "gulp": "3.8.x",
-    "gulp-concat": "^2.4.2",
+    "bower": "1.7.x",
+    "gulp": "3.9.x",
+    "gulp-concat": "2.4.2",
     "gulp-jshint": "1.6.x",
     "gulp-uglify": "1.0.x",
+    "jasmine-core": "2.4.1",
     "jshint-stylish": "0.2.x",
-    "karma": "0.12.x",
+    "karma": "0.13.19",
     "karma-chrome-launcher": "0.1.x",
-    "karma-coverage": "0.2.x",
-    "karma-jasmine": "0.x",
-    "karma-junit-reporter": "0.2.x",
-    "karma-phantomjs-launcher": "0.1.x"
+    "karma-coverage": "0.5.3",
+    "karma-jasmine": "0.3.6",
+    "karma-junit-reporter": "0.3.8",
+    "karma-phantomjs-launcher": "0.2.3",
+    "phantomjs": "2.1.3"
   }
 }
