--- a/.jshintrc
+++ b/.jshintrc
@@ -5,7 +5,7 @@
     "eqeqeq": true,
     "eqnull": true,
     "indent": 4,
-    "latedef": true,
+    "latedef": "function",
     "newcap": true,
     "quotmark": "single",
     "trailing": true,
