--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "homepage": "https://github.com/showpad/angularin-viewport",
   "devDependencies": {
-    "bower": "1.7.x",
+    "angular-mocks": "1.2.32",
+    "angular-scenario": "1.2.32",
     "gulp": "3.9.x",
     "gulp-concat": "2.4.2",
     "gulp-jshint": "1.6.x",
@@ -35,5 +36,8 @@
     "karma-junit-reporter": "0.3.8",
     "karma-phantomjs-launcher": "0.2.3",
     "phantomjs": "2.1.3"
+  },
+  "dependencies": {
+    "angular": "1.2.32"
   }
 }
